--- a/server/djangoapp/templates/djangoapp/Contact.html
+++ b/server/djangoapp/templates/djangoapp/Contact.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
     
 <head>
+    <title>
+        Contact Us
+    </title>
+    
     <meta charset="UTF-8">
     <title>Dealership Review</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -13,22 +16,3 @@
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
 
 </head>
-
-    <body>
-    <!-- Remove this line the first time you edit this file -->
-     
-    <!--Add a nav bar here -->
-    
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                  <a class="navbar-brand" href="#"></a>
-            </div>
-        </div>
-    </nav>
-    
-    <!--Add a dealer table here -->
-
-    </body>
-
-</html>
